# DeltaNEAR

./: .env.example  .env.testnet  .gitignore  README.md  RELEASE_v1.0.0.md  deploy-simple.sh  docker-compose.yml  jest.e2e.config.js  jest.integration.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-deployed-contract-final.js  test-deployed-contract.js  test-local-contract.js  tsconfig.json
contracts/: manifest-v2.0.0.json
contracts/near-intents-derivatives/: Cargo.toml
contracts/near-intents-derivatives/abi/: v1.0.0.json
contracts/near-intents-derivatives/scripts/: validate-abi.sh
contracts/near-intents-derivatives/src/: canonicalization.rs  canonicalization_proptest.rs  events.rs  lib.rs  lib_complex.rs  lib_working.rs  tests.rs
contracts/near-intents-derivatives/test-vectors/: canonical-hashing.json
deploy/: deltanear_v2.wasm  docker-compose.testnet.yml  near_intents_derivatives.wasm  near_intents_derivatives_opt.wasm
docs/: ABI_STABILITY_V1.md  ARCHITECTURE_UPDATE.md  CANONICALIZATION_SPEC_V1.md  CI_STATUS_AND_FIXES_NEEDED.md  CLEANUP_SUMMARY.md  CONFORMANCE_TEST_CORPUS_REQUIREMENTS.md  DEPLOYMENT.md  DERIVATIVES_INTENT_SCHEMA_V1.md  IMPLEMENTATION_CORRECTIONS.md  INDEX.md  METADATA_CONTRACT_V1.md  MIGRATION_V1_TO_V2.md  PROJECT_STATE_AND_TODOS.md  TEST_STATUS_V2.md  V2_SPECIFICATION_FREEZE.md
proto/: jest.config.js  package.json  tsconfig.json
scripts/: bootstrap-testnet.sh  cli.js  demo-option.js  demo-perp.js  deploy-testnet.sh  deploy-v2-testnet.js  fund-testnet.sh  migrate-v1-to-v2.js  prepare-release.sh  quick-deploy-v2.js  (+4 more)
(+113 files in other folders)
