[package]
name = "deltanear-derivatives"
version = "1.0.0"
authors = ["DeltaNEAR Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.2.0"
borsh = "1.5"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
schemars = "0.8"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true